--- a/alert-rules.yaml
+++ b/alert-rules.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   labels:
+    release: prometheus
     prometheus: kube-prometheus-stack-prometheus
     role: alert-rules
   name: nginx-app-rules
