--- a/pod-monitor.yaml
+++ b/pod-monitor.yaml
@@ -2,6 +2,8 @@ apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
   name: nginx-pod-monitor
+  release: prometheus
+  app: prometheus
 spec:
   selector:
     matchLabels:
