--- a/service-monitor.yaml
+++ b/service-monitor.yaml
@@ -2,6 +2,9 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: nginx-service-monitor
+  labels:
+    release: prometheus
+    app: prometheus
 spec:
   selector:
     matchLabels:
@@ -9,3 +12,4 @@ spec:
   endpoints:
     - port: web
       interval: 30s
+      path: /swagger-stats/metrics
