--- a/service-monitor.yaml
+++ b/service-monitor.yaml
@@ -6,10 +6,11 @@ metadata:
     release: prometheus
     app: prometheus
 spec:
+  jobLabel: job
   selector:
     matchLabels:
       app: nginx
   endpoints:
-    - port: web
+    - port: nginx-port
       interval: 30s
-      path: /swagger-stats/metrics
+      path: /metrics
